--- a/style.css
+++ b/style.css
@@ -7,3 +7,45 @@ body {
 a {
   color: #ffffff;
 }
+
+#splash {
+  background: #d10aa2; /* Old browsers */
+  background: -moz-linear-gradient(-45deg, #d10aa2 0%, #3925bc 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(-45deg, #d10aa2 0%,#3925bc 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(135deg, #d10aa2 0%,#3925bc 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d10aa2', endColorstr='#3925bc',GradientType=1 );
+    position: absolute;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  width: 100%;
+  height: 100%;
+
+  margin: auto;
+  z-index: 1000;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.loading {
+  width: 100px;
+  animation: spin 5s infinite linear;
+}
+
+.loading img {
+  width: 100%;
+}
